updated image to images

--- a/views/adminfold/banner.ejs
+++ b/views/adminfold/banner.ejs
@@ -30,7 +30,7 @@
         <div >
             
 
-                <h1 class="mb-4">Upload Your Banner Image</h1>
+                <h1 class="mb-4">Upload Your Banner Images</h1>
 
                 <form action="/submitbanner" method="post" enctype="multipart/form-data" id="imageForm">
                     <div class="form-group">
