--- a/views/adminfold/banner.ejs
+++ b/views/adminfold/banner.ejs
@@ -27,10 +27,10 @@
    <!-- mainform -->
    <div class="container mt-4  col-md-9">
     
-        <div >
+        <div>
             
 
-                <h1 class="mb-4">Upload Your Banner Images</h1>
+                <h1 class="mb-4">Upload Your Banner Image</h1>
 
                 <form action="/submitbanner" method="post" enctype="multipart/form-data" id="imageForm">
                     <div class="form-group">
