--- a/views/adminfold/addproduct.ejs
+++ b/views/adminfold/addproduct.ejs
@@ -42,7 +42,7 @@
             <label for="brandName">Brand Name:</label>
             <select class="form-control" id="brandName" name="Brand">
               <%for(var i=0;i<data1.brandnames.length;i++){%>  
-              <option value="<%=data1.brandnames[i]%>" ><%=data1.brandnames[i]%></option>
+              <option value="<%=data1?.brandnames[i]%>" ><%=data1?.brandnames[i]%></option>
               <%}%>
                 <!-- Add more options as needed -->
             </select>
@@ -53,7 +53,7 @@
             <label for="category">Category:</label>
             <select class="form-control" id="category" name="Catagory">
               <%for(var i=0;i<data.length;i++){%>
-                <option value="<%=data[i].Category%>"><%=data[i].Category%></option>
+                <option value="<%=data[i]?.Category%>"><%=data[i]?.Category%></option>
                 
                 <!-- Add more options as needed -->
               <%}%>
