--- a/views/adminfold/adminorderdetails.ejs
+++ b/views/adminfold/adminorderdetails.ejs
@@ -88,7 +88,7 @@
                     </table>
         
                     <div class="total text-right mt-3">
-                        <p>Grand Total:<%=data.total_price%></p>
+                        <p>Grand Total:<%=data?.total_price%></p>
                     </div>
                     
                 </div>
