--- a/views/adminfold/viewcatagoryandbrand.ejs
+++ b/views/adminfold/viewcatagoryandbrand.ejs
@@ -26,7 +26,7 @@
                 </div>
                 <div class="card-body">
                     <ul class="list-group" id="categoryList">
-                        <%if(data.length){
+                        <%if(data?.length){
                             for(i=0;i<data.length;i++){%>
                         <li class="list-group-item d-flex justify-content-between align-items-center">
                             <%=data[i].Category%>
