--- a/views/adminfold/editcatagory.ejs
+++ b/views/adminfold/editcatagory.ejs
@@ -19,16 +19,16 @@
     <div class="row">
         <div class="col-md-6">
             <h2> Edit Category and Types</h2>
-            <form action="/editcatagory/<%=data._id%>" method="post" >
+            <form action="/editcatagory/<%=data?._id%>" method="post" >
                 <div class="form-group">
                     <label for="category">Category</label>
-                    <input type="text" class="form-control" id="category" name="Category" required value="<%=data.Category%>">
+                    <input type="text" class="form-control" id="category" name="Category" required value="<%=data?.Category%>">
                 </div>
                
                  
                 <div class="form-group">
                     <label for="type">Types</label>
-                    <%data.type.forEach((type, index) => { %>
+                    <%data?.type.forEach((type, index) => { %>
                     <div id="typeInputs">
                         <div class="input-group mb-2">
                             <input type="text" class="form-control" name="type" required value="<%=type%>">
